Progression in refactoring - this now seems to work.
Signed-off-by: clinique <gael@lhopital.org>